--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </style>
 </head>
 <body>
+<div style="height: 100px; display:flex; align-items: end; flex-direction: row-reverse;">
+    <button id="switch" style="">brute</button>
+</div>
 <canvas id="canvas"></canvas>
-</body>
+</body> 
 <script src="./index.js"></script>
