--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
             overflow:hidden;
             width:100%;
             height:100%;
-            cursor:none;
         }
     </style>
 </head>
 <body>
 <div style="height: 100px; display:flex; align-items: end; flex-direction: row-reverse;">
-    <button id="switch" style="">brute</button>
+    <button id="switch" style="">divideAndConquer</button>
 </div>
 <canvas id="canvas"></canvas>
 </body> 
